# awesometrader

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  data_collector.py  package-lock.json  pyproject.toml  run_collector.py  run_messager.py  run_scheduler.py  run_trader.py  start_scheduler.sh  start_webapp.sh  stop_scheduler.sh  stop_webapp.sh
.claude/: settings.local.json
awesometrader/: __init__.py  collector.py  datainterface.py  messager.py  trader.py  utils.py
awesometrader/collector/: __init__.py  longport_api.py  longport_quota_api.py
awesometrader/data/: __init__.py  data_interface.py
awesometrader/notify/: __init__.py  dingtalk_messager.py
awesometrader/tests/: test_trade_simple.py
awesometrader/trader/: __init__.py  longport_trade_api.py  longport_trader_api.py
awesometrader/utils/: option_pricer.py  utils.py
config/: tasks.yaml
docs/: dingding_setup.md  longport_quota_cli_usage.md  longport_trade_cli_usage.md  webapp_setup.md  webapp_startup.md
output/: account_metrics_20251208.json  account_metrics_20251208.txt
results/: MultiFactor.html  Sma.html  SmaCross.html
scheduler/: config_loader.py  executor.py  manager.py
strategies/: macd.py  mfi.py  multi_factor.py  sma.py  sma_cross.py  test.py
tasks/: account_reporter.py  exchange_rate.py  longport_quota_cli.py  longport_trade_cli.py  run_collector.py  run_messager.py  task_check_env.py  task_test.py
tests/: test_data_simple.py  test_message_simple.py  test_trade_simple.py
webapp/: __init__.py
webapp/backend/: __init__.py  config.py  main.py
webapp/backend/models/: schemas.py
webapp/backend/routes/: __init__.py  analytics.py  auth.py
webapp/backend/services/: __init__.py  analytics_service.py  auth_service.py  benchmark_service.py  data_loader.py
webapp/frontend/: .gitkeep  App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
webapp/frontend/components/: AssetChart.tsx  DrawdownChart.tsx  EquityChart.tsx  LoginPage.tsx  MetricExplanationModal.tsx  MetricsCharts.tsx  MonthlyHeatmap.tsx  RiskMetrics.tsx  StatCard.tsx
webapp/frontend/contexts/: AuthContext.tsx
webapp/frontend/services/: api.ts
